# otus_cpp_basic_homework

./: .gitignore  CMakeLists.txt  Guess_The_Number.cpp  game.cpp  game.h  hello_world.cpp  high_scores.txt  move_me_out.cpp  random.cpp  readme.md  user_name.cpp  user_name.h  welcome.cpp
